--- a/resume.html
+++ b/resume.html
@@ -74,9 +74,11 @@
                                     <h1 class="title" style="font-size:3vh">Computer Science I &amp; Logic and Computation TA</h1>
                                 </div>
                                 <div style="height:100px; width:300px; overflow:hidden;">
-                                    <p class="p">
-                                        <img src='BCLogo.jpeg'  alt="" width="250px"/>
-                                    </p>
+                                    <div class="hide_p">
+                                        <p class="p">
+                                            <img src='BCLogo.jpeg'  alt="" width="250px"/>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -97,9 +99,11 @@
                                     <h1 class="title" style="font-size:3vh">Lead Website Developer</h1>
                                 </div>
                                 <div style="height:100px; width:300px; overflow:hidden;">
-                                    <p class="p">
-                                        <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" style="width:250px"/>
-                                    </p>
+                                    <div class="hide_p">
+                                        <p class="p">
+                                            <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" style="width:250px"/>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -122,9 +126,11 @@
                                     <h1 class="title" style="font-size:3vh">Lead App Developer</h1>
                                 </div>
                                 <div style="height:100px; width:300px; overflow:hidden;">
-                                    <p class="p">
-                                        <img src='RPCALogo.jpg'  alt="" width="250px"/>
-                                    </p>
+                                    <div class="hide_p">
+                                        <p class="p">
+                                            <img src='RPCALogo.jpg'  alt="" width="250px"/>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -146,9 +152,11 @@
                                     <h1 class="title" style="font-size:3vh">IT Intern</h1>
                                 </div>
                                 <div style="height:100px; width:300px; overflow:hidden;">
-                                    <p class="p">
-                                        <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="width:200px; margin-top:-50px;"/>
-                                    </p>
+                                    <div class="hide_p">
+                                        <p class="p">
+                                            <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="width:200px; margin-top:-50px;"/>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -170,9 +178,11 @@
                                     <h1 class="title" style="font-size:3vh">Head Secretary</h1>
                                 </div>
                                 <div style="height:100px; width:300px; overflow:hidden;">
-                                    <p class="p">
-                                        <img src='LuckyStarLogo.png'  alt="" style="width:200px"/>
-                                    </p>
+                                    <div class="hide_p">
+                                        <p class="p">
+                                            <img src='LuckyStarLogo.png'  alt="" style="width:200px"/>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
