--- a/resume.html
+++ b/resume.html
@@ -82,12 +82,16 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="font-size:16px; text-align:left">
-                            <div>
-                                September 2021 - Present
-                            </div>
-                            <br>
-                                - Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
+                        <div class="hide_p">
+                            <p class="p">
+                                <div style="text-align:left">
+                                    <div>
+                                        September 2021 - Present
+                                    </div>
+                                    <br>
+                                        - Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
+                                </div>                            
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -107,15 +111,19 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="font-size:16px; text-align:left">
-                            <div>
-                                June 2021 - December 2021
-                            </div>
-                            <br>
-                                - Designed and built out a client to fetch updated data from our API using WebSocket to provide 50+ users with real-time messages, notifications, etc. on a page click or a page refresh.
-                                <br>- Implemented a separate program to create an interactive homepage using transitions to guide the user through the product, about us, contact, and ambassador application page.
-                                <br>- Facilitated and recorded focus groups where we gathered and implemented suggestions on new or current features such as scroll indicators to make certain functions more intuitive.                        
-                            </div>
+                        <div class="hide_p">
+                            <p class="p">
+                                <div style="text-align:left">
+                                    <div>
+                                        June 2021 - December 2021
+                                    </div>
+                                    <br>
+                                        - Designed and built out a client to fetch updated data from our API using WebSocket to provide 50+ users with real-time messages, notifications, etc. on a page click or a page refresh.
+                                        <br>- Implemented a separate program to create an interactive homepage using transitions to guide the user through the product, about us, contact, and ambassador application page.
+                                        <br>- Facilitated and recorded focus groups where we gathered and implemented suggestions on new or current features such as scroll indicators to make certain functions more intuitive.                        
+                                </div>                            
+                            </p>
+                        </div>
                     </div>
                 </li>
                 <li class="snap">
@@ -134,14 +142,18 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="font-size:16px; text-align:left">
-                            <div>
-                                June 2021 - September 2021
-                            </div>
-                            <br>
-                                - Programmed/maintained a tablet application that would visually assist interventionists in explaining both American culture and family-strengthening concepts to Somali Bantu and Bhutanese refugees; reviewed by 40 Somali Bantu and 40 Bhutanese refugees and aimed towards aiding refugees from 20 different countries.
-                                <br>- Met weekly with the different teams (design, cultural, etc.) to implement the most intuitive and culturally/linguistically appropriate features for the client-facing app.
-                            </div>
+                        <div class="hide_p">
+                            <p class="p">
+                                <div style="text-align:left">
+                                    <div>
+                                        June 2021 - September 2021
+                                    </div>
+                                    <br>
+                                        - Programmed/maintained a tablet application that would visually assist interventionists in explaining both American culture and family-strengthening concepts to Somali Bantu and Bhutanese refugees; reviewed by 40 Somali Bantu and 40 Bhutanese refugees and aimed towards aiding refugees from 20 different countries.
+                                    <br>- Met weekly with the different teams (design, cultural, etc.) to implement the most intuitive and culturally/linguistically appropriate features for the client-facing app.
+                                </div>
+                            </p>
+                        </div>
                     </div>
                 </li>
                 <li class="snap">
@@ -160,14 +172,18 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="font-size:16px; text-align:left">
-                            <div>
-                                May 2021 - August 2021
-                            </div>
-                            <br>
-                                - Engineered a hardware inventory tracking program which featured current inventory status, inventory change logs, and managed data distributed throughout all 39 of the company’s stores to eliminate information delay by at least 10 minutes when having to phone an employee to check manually.
-                                <br>- Assisted coworkers from a variety of teams with computer issues that arose from daily operation.                            
-                            </div>
+                        <div class="hide_p">
+                            <p class="p">
+                                <div style="text-align:left">
+                                    <div>
+                                        May 2021 - August 2021
+                                    </div>
+                                    <br>
+                                        - Engineered a hardware inventory tracking program which featured current inventory status, inventory change logs, and managed data distributed throughout all 39 of the company’s stores to eliminate information delay by at least 10 minutes when having to phone an employee to check manually.
+                                        <br>- Assisted coworkers from a variety of teams with computer issues that arose from daily operation.                            
+                                </div>                                   
+                            </p>
+                        </div>
                     </div>
                 </li>
                 <li class="snap">
@@ -186,13 +202,17 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="font-size:16px; text-align:left">
-                            <div>
-                                May 2020 - August 2020
-                            </div>
-                            <br>
-                                - Recorded and analyzed sales values through Microsoft Excel and offered feedback regarding customer habits to management.                                    </p>
-                            </div>
+                        <div class="hide_p">
+                            <p class="p">
+                                <div style="text-align:left">
+                                    <div>
+                                        May 2020 - August 2020
+                                    </div>
+                                    <br>
+                                        - Recorded and analyzed sales values through Microsoft Excel and offered feedback regarding customer habits to management.                                    </p>
+                                </div>                            
+                            </p>
+                        </div>
                     </div>
                 </li>
             </div>
