--- a/resume.html
+++ b/resume.html
@@ -76,7 +76,7 @@
                                 <div style="height:100px; width:300px; overflow:hidden;">
                                     <div class="hide_p">
                                         <p class="p">
-                                            <img src='BCLogo.jpeg'  alt="" width="250px"/>
+                                            <img src='BCLogo.jpeg'  alt="" width="100%"/>
                                         </p>
                                     </div>
                                 </div>
@@ -103,7 +103,7 @@
                                 <div style="height:100px; width:300px; overflow:hidden;">
                                     <div class="hide_p">
                                         <p class="p">
-                                            <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" style="width:250px"/>
+                                            <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" width="100%"/>
                                         </p>
                                     </div>
                                 </div>
@@ -132,7 +132,7 @@
                                 <div style="height:100px; width:300px; overflow:hidden;">
                                     <div class="hide_p">
                                         <p class="p">
-                                            <img src='RPCALogo.jpg'  alt="" width="250px"/>
+                                            <img src='RPCALogo.jpg'  alt="" width="100%"/>
                                         </p>
                                     </div>
                                 </div>
@@ -160,7 +160,7 @@
                                 <div style="height:100px; width:300px; overflow:hidden;">
                                     <div class="hide_p">
                                         <p class="p">
-                                            <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="width:200px; margin-top:-50px;"/>
+                                            <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="margin-top:-50px;" width="100%"/>
                                         </p>
                                     </div>
                                 </div>
@@ -188,7 +188,7 @@
                                 <div style="height:100px; width:300px; overflow:hidden;">
                                     <div class="hide_p">
                                         <p class="p">
-                                            <img src='LuckyStarLogo.png'  alt="" style="width:200px"/>
+                                            <img src='LuckyStarLogo.png'  alt="" width="100%"/>
                                         </p>
                                     </div>
                                 </div>
