--- a/resume.html
+++ b/resume.html
@@ -66,6 +66,30 @@
                     </div>
                 </li>
                 <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
+
+                <li class="snap">
+                    <div class= 'container off'>
+                        <div class="container_outer_img">
+                            <video width="100%" autoplay loop>
+                                <source src="connecdingapp.mp4" type="video/mp4">
+                                Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
+                            </video>
+                        </div>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
+                                    <h1 class = "title">ConnecD!ng App</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        <b>Startup (6.1.2021,12.31.2021)- </b> One of the largest projects that I have ever picked up, the goal of this program was to replicate many of the messaging, posting, commenting, and liking functions that many established social medias already offer while also organizing the user's existing social media accounts. The program made use of SQL (originally firebase) API to fetch and retrieve conversation and post content and utilized HTML, CSS, JavaScript for the visual and linking functionalities.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_content">
