--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
                                 <div style="height:100px; width:300px; overflow:hidden;">
                                     <div class="hide_p">
                                         <p class="p">
-                                            <img src='BCLogo.jpeg'  alt="" width="100%"/>
+                                            <img src='BCLogo.jpeg'  alt="" width="100%" style="width:100%"/>
                                         </p>
                                     </div>
                                 </div>
