--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
         <div>
             <!--Headings for website-->
             <h1 class = "center">
-                <a class = index href="/">Justin Pork</a>
+                <a class = index href="/">Justin Park</a>
             </h1>
             <h2 class = "center">
                 parkaxp@bc.edu|201-663-2139
