--- a/resume.html
+++ b/resume.html
@@ -70,10 +70,7 @@
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
-                            <video width="100%" autoplay loop>
-                                <source src="connecdingapp.mp4" type="video/mp4">
-                                Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
-                            </video>
+                            <img src='BCLogo.jpeg'  alt="" width="100%" style="width:100%"/>
                         </div>
                         <div class="container_content">
                             <div class="container_content_inner">
@@ -81,8 +78,12 @@
                                     <h1 class = "title">ConnecD!ng App</h1>
                                 </div>
                                 <div class="hide_p">
-                                    <p class="p">
-                                        <b>Startup (6.1.2021,12.31.2021)- </b> One of the largest projects that I have ever picked up, the goal of this program was to replicate many of the messaging, posting, commenting, and liking functions that many established social medias already offer while also organizing the user's existing social media accounts. The program made use of SQL (originally firebase) API to fetch and retrieve conversation and post content and utilized HTML, CSS, JavaScript for the visual and linking functionalities.
+                                    <p class="p" style="text-align:left">
+                                        <div>
+                                            September 2021 - Present
+                                        </div>
+                                        <br>
+                                            - Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
                                     </p>
                                 </div>
                             </div>
