--- a/resume.html
+++ b/resume.html
@@ -67,7 +67,7 @@
                 </li>
                 <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
 
-                <li class="snap">
+                {% comment %} <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
                             <img src='BCLogo.jpeg'  alt="" width="100%" style="width:100%"/>
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                     </div>
-                </li>
+                </li> {% endcomment %}
 
                 <li class="snap">
                     <div class= 'container off'>
