--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
         <div>
             <!--Headings for website-->
             <h1 class = "center">
-                <a class = index href="/">Justin Park</a>
+                <a class = index href="/">Justin Pork</a>
             </h1>
             <h2 class = "center">
                 parkaxp@bc.edu|201-663-2139
@@ -67,10 +67,10 @@
                 </li>
                 <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
 
-                {% comment %} <li class="snap">
+                <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
-                            <img src='BCLogo.jpeg'  alt="" width="100%" style="width:100%"/>
+                            <img src='BCLogo.jpeg'  alt="" width="100%" style="width:50%"/>
                         </div>
                         <div class="container_content">
                             <div class="container_content_inner">
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                     </div>
-                </li> {% endcomment %}
+                </li>
 
                 <li class="snap">
                     <div class= 'container off'>
