--- a/resume.html
+++ b/resume.html
@@ -69,30 +69,6 @@
 
                 <li class="snap">
                     <div class= 'container off'>
-                        <div class="container_outer_img">
-                            <img src='BCLogo.jpeg'  alt="" width="100%" style="width:50%"/>
-                        </div>
-                        <div class="container_content">
-                            <div class="container_content_inner">
-                                <div class="hide_title">
-                                    <h1 class = "title">ConnecD!ng App</h1>
-                                </div>
-                                <div class="hide_p">
-                                    <p class="p" style="text-align:left">
-                                        <div>
-                                            September 2021 - Present
-                                        </div>
-                                        <br>
-                                            - Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-
-                <li class="snap">
-                    <div class= 'container off'>
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
@@ -101,7 +77,7 @@
                                 <div style="height:100px; width:300px; overflow:hidden;">
                                     <div class="hide_p">
                                         <p class="p">
-                                            <img src='BCLogo.jpeg'  alt="" width="100%" style="width:100%"/>
+                                            <img src='BCLogo.jpeg'  alt="" width="100%" style="width:70%"/>
                                         </p>
                                     </div>
                                 </div>
@@ -128,7 +104,7 @@
                                 <div style="height:100px; width:300px; overflow:hidden;">
                                     <div class="hide_p">
                                         <p class="p">
-                                            <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" width="100%"/>
+                                            <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" width="100%" style="width:70%"/>
                                         </p>
                                     </div>
                                 </div>
@@ -157,7 +133,7 @@
                                 <div style="height:100px; width:300px; overflow:hidden;">
                                     <div class="hide_p">
                                         <p class="p">
-                                            <img src='RPCALogo.jpg'  alt="" width="100%"/>
+                                            <img src='RPCALogo.jpg'  alt="" width="100%" style="width:70%"/>
                                         </p>
                                     </div>
                                 </div>
@@ -185,7 +161,7 @@
                                 <div style="height:100px; width:300px; overflow:hidden;">
                                     <div class="hide_p">
                                         <p class="p">
-                                            <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="margin-top:-50px;" width="100%"/>
+                                            <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="margin-top:-50px;" width="100%" style="width:70%"/>
                                         </p>
                                     </div>
                                 </div>
@@ -213,7 +189,7 @@
                                 <div style="height:100px; width:300px; overflow:hidden;">
                                     <div class="hide_p">
                                         <p class="p">
-                                            <img src='LuckyStarLogo.png'  alt="" width="100%"/>
+                                            <img src='LuckyStarLogo.png'  alt="" width="100%" style="width:70%"/>
                                         </p>
                                     </div>
                                 </div>
