--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <tr>
                     <!--Links to navigate through the different webpages-->
                     <td class = links><a class = nav href="profile.html">Profile</a></td>
-                    <td class = links><a class = nav href="resume.html">Resume</a></td>
+                    {% comment %} <td class = links><a class = nav href="resume.html">Resume</a></td> {% endcomment %}
                     <td class = links><a class = nav href="projects.html">Projects</a></td>
                 </tr>
             </table>
         </div>
         <!--Home Screen Photo-->
         <div class = "center">
-            <img alt ="ambient coding" src="ambient_coding.jpg" width = "80%" height = "80%">
+            <img alt ="ambient coding" src="img/ambient_coding.jpg" width = "80%" height = "80%">
         </div>
         <div>
             <hr class="solid">
