--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
                 <tr>
                     <!--Links to navigate through the different webpages-->
                     <td class = links><a class = nav href="profile.html">Profile</a></td>
-                    <td class = links><a class = nav href="resume.html">Resume</a></td>
+                    {% comment %} <td class = links><a class = nav href="resume.html">Resume</a></td> {% endcomment %}
                     <td class = links><a class = nav href="projects.html">Projects</a></td>
                 </tr>
             </table>
