--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <!--Home Screen Photo-->
         <div class = "center">
-            <img alt ="ambient coding" src="img/ambient_coding.jpg" width = "80%" height = "80%">
+            <img alt ="ambient coding" src="imgd/ambient_coding.jpg" width = "80%" height = "80%">
         </div>
         <div>
             <hr class="solid">
