--- a/profile.html
+++ b/profile.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <link href = "styles.css" rel = "stylesheet">
+        <link href = "css/styles.css" rel = "stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" rel="stylesheet">
         <title>Welcome to my Homepage</title>
-        <link rel="icon" type="image/png" href="tabicon.png">
+        <link rel="icon" type="image/png" href="media/img/tabicon.png">
     </head>
     <body>
         <div>
@@ -52,7 +52,7 @@
                         </div>
                         <!--Image-->
                         <div class="container_outer_img">
-                            <img src='BC_Selfie.jpg'  alt="" class="container_img"/>
+                            <img src='media/img/BC_Selfie.jpg'  alt="" class="container_img"/>
                         </div>
                     </div>
                 </li>
@@ -60,7 +60,7 @@
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
-                            <img src='aerok.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='media/img/aerok.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                         <div class="container_content">
                             <div class="container_content_inner">
@@ -79,7 +79,7 @@
                 <li class="snap">
                     <div class= 'container'>
                         <div class="container_outer_img">
-                            <img src='cowboyhat.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='media/img/cowboyhat.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                         <div class="container_content">
                             <div class="container_content_inner">
@@ -94,8 +94,8 @@
                             </div>
                         </div>
                         <div class="container_outer_img">
-                            <img src='piano.jpg'  alt="" class="container_img picture_resize1"/>
-                            <img src='theatre.jpg'  alt="" class="container_img picture_resize"/>  
+                            <img src='media/img/piano.jpg'  alt="" class="container_img picture_resize1"/>
+                            <img src='media/img/theatre.jpg'  alt="" class="container_img picture_resize"/>  
                         </div>
                     </div>
                 </li>
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                         <div class="container_outer_img">
-                            <img src='jamieari.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='media/img/jamieari.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                     </div>
                 </li>
