--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <link href = "styles.css" rel = "stylesheet">
+        <link href = "css/styles.css" rel = "stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" rel="stylesheet">
         <title>Welcome to my Homepage</title>
-        <link rel="icon" type="image/png" href="tabicon.png">
+        <link rel="icon" type="image/png" href="media/img/tabicon.png">
     </head>
     <body>
         <div>
@@ -31,7 +31,7 @@
         </div>
         <!--Home Screen Photo-->
         <div class = "center">
-            <img alt ="ambient coding" src="img/ambient_coding.jpg" width = "80%" height = "80%">
+            <img alt ="ambient coding" src="media/img/ambient_coding.jpg" width = "80%" height = "80%">
         </div>
         <div>
             <hr class="solid">
