--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <link href = "styles.css" rel = "stylesheet">
+        <link href = "css/styles.css" rel = "stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" rel="stylesheet">
         <title>Welcome to my Homepage</title>
-        <link rel="icon" type="image/png" href="tabicon.png">
+        <link rel="icon" type="image/png" href="media/img/tabicon.png">
     </head>
     <body>
         <div>
@@ -53,7 +53,7 @@
                         <!--Image-->
                         <div class="container_outer_img">
                             <video width="100%" autoplay loop>
-                                <source src="connecdinghome.mp4" type="video/mp4">
+                                <source src="media/mp4/connecdinghome.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
@@ -64,7 +64,7 @@
                     <div class= 'container off'>
                         <div class="container_outer_img">
                             <video width="100%" autoplay loop>
-                                <source src="connecdingapp.mp4" type="video/mp4">
+                                <source src="media/mp4/connecdingapp.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
@@ -100,7 +100,7 @@
                         <!--Image-->
                         <div class="container_outer_img">
                             <video width="100%" autoplay loop>
-                                <source src="RPCA.mp4" type="video/mp4">
+                                <source src="media/mp4/RPCA.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
@@ -110,7 +110,7 @@
                     <div class= 'container off'>
                         <div class="container_outer_img">
                             <video width="100%" autoplay loop>
-                                <source src="AAO.mp4" type="video/mp4">
+                                <source src="media/mp4/AAO.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="container_outer_img">
                             <video width="100%" autoplay loop>
-                                <source src="tetris.mp4" type="video/mp4">
+                                <source src="media/mp4/tetris.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
@@ -154,7 +154,7 @@
                     <div class= 'container off'>
                         <div class="container_outer_img">
                             <video width="100%" autoplay loop>
-                                <source src="pong.mp4" type="video/mp4">
+                                <source src="media/mp4/pong.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
@@ -188,7 +188,7 @@
                         </div>
                         <div class="container_outer_img">
                             <video width="100%" autoplay loop>
-                                <source src="snake.mp4" type="video/mp4">
+                                <source src="media/mp4/snake.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
